	implements several methods for initialising the principal curve.

	* Stratiplot: if 'zones' are supplied, a legend on the right-hand
	side of the diagram can be drawn by setting argument 'drawLegend'
	to TRUE (the default). Currently, only simple blocks that
	demarcate the zone boundaries are drawn and labelled using
	argument 'zoneNames'.

	* residLen: was not 'join'-ing the training set and passive data
	correctly and would fail if species were found in one but not the
	other data set.

	* tran: improvements to the underlying code.

	* distance: reslience to NA in "gower", "alt.gower", "mixed".

	* cma: added methods for 'mat' and 'predict.mat' objects. These
	allow you to retrieve the k-closest analogues for training set
	and prediction data respectively.

	* dissimilarities: new method for 'mat' objects.

Version 0.6-26

	* abernethy: New data set containing the classic Abernethy Forest
	data of Birks and Mathewes (1978)

	* Stratiplot: Preserves the names component as far as is
	possible, even to the extent of processing the names after the
	manipulations arising from the formula interface.

	Bug in padding of the y-axis now fixed; default is to add 1% of
	the range y-axis to the y-axis limits specified.

	Bug in computing length of variable labels when 'strip = FALSE'
	now fixed.

	* panel.Stratiplot: Add capability to draw zones on stratigraphic
	plots via new argument 'zones' which takes the numeric levels of
	the zone boundaries on the scale of the plot y-axis. How the
	zone markers are drawn can be controlled via several graphical
	parameters. See ?panel.Stratiplot.

	* chooseTaxa: Explicitly preserves row and column names.

	* DESCRIPTION: prematurely added princurve as a dependency in
	previous version.

Version 0.6-25

	* chooseTaxa: new function to select species on basis of number
	of occurrences and maximum abundance. Function is an S3 generic
	with a default method.

Version 0.6-24

	* Dependencies: package now depends on package 'grid'.
